<resources>
    //
    <string name="app_name">Two道</string>
    <string name="jin_e">累计返利金额 (元)</string>
    <string name="jia_ge">2199.00</string>
    <string name="qi_shu">带返期数 (笔)</string>
    <string name="num_shu">5</string>
    <string name="query_num">记录查询</string>
    <string name="bang_ding">已绑定</string>
    <string name="wei_xin">微信</string>
    <string name="go_on_bind">继续绑定</string>
    <string name="zhi_fu">支付宝</string>
    <string name="geng_duo">></string>
    <string name="dunxin">短信验证登录</string>
    <string name="number_shixiang">未注册的手机号登录成功后将自动注册为大道用户</string>
</resources>
